Mostly settled on a working system for attribute definition
