# backend/src/cultivars/domain/models.py
@@ -1,25 +1,23 @@
 # VerdanTech Source
-from src.attributes.domain import Attribute, AttributeProfile, AttributeProfileSet
 from src.common.domain import (
     Entity,
     Ref,
     RootEntity,
-    root_entity_transform,
-    value_transform,
+    root_entity_transform, entity_transform
 )
 from src.garden.domain import Garden
 from src.user.domain import User
-
+from .attributes import CultivarAttributeProfileSet
 type CultivarCollectionParentType = Garden | User
 """CultivarCollections can be linked to either a User or a Garden."""
 
 
-@root_entity_transform
+@entity_transform
 class Cultivar(Entity):
     name: str
     abbreviation: str
     parent_name: str
-    attributes: CultivarAttributeCluster = CultivarAttributeCluster()
+    attributes: CultivarAttributeProfileSet = CultivarAttributeProfileSet()
     enabled: bool = True
 
 
