# backend/src/cultivars/entrypoints/litestar/router.py
@@ -1,0 +1,14 @@
+# External Libraries
+from litestar import Router
+
+from .commands import CultivarCommandController
+
+
+def create_cultivar_router() -> Router:
+    """
+    Configure the cultivar router.
+    """
+    return Router(
+        path="cultivars",
+        route_handlers=[CultivarCommandController],
+    )
